--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,20 @@
-// TODO
+.headerContainer{
+    height: 5rem;
+    border-bottom: 1px solid var(--gray-800);
+    }
+
+    .headerContent{
+        max-width: 1120px;
+        height: 5rem;
+        margin: 0 auto;
+        padding: 0 10rem;
+    
+        display: flex;
+        align-items: center;
+
+        img{
+            cursor: pointer;
+        }
+    }
+
+    
